native/include/alexandria_ffi.h

/**
 * FFI status codes returned by collection operations (UC-10+). Deliberately
 * separate from `INDEX_*` and `FILE_*` — per the convention above — so the
 * Collections use cases can grow their own set without colliding;
 * `COLLECTION_OK == FILE_OK == 0` by convention. There is no disk code: a
 * collection is catalog-only metadata with nothing on disk.
 */
#define COLLECTION_OK 0
#define COLLECTION_ERR_INVALID_INPUT 1
#define COLLECTION_ERR_UNAUTHORIZED 2
#define COLLECTION_ERR_NOT_INITIALIZED 3
#define COLLECTION_ERR_NOT_FOUND 4
#define COLLECTION_ERR_INVALID_STATE 5
#define COLLECTION_ERR_OTHER 9
/**
 * FFI status codes returned by bookmark operations (UC-15+). Deliberately
 * separate from `COLLECTION_*` — per the convention above — so bookmark use
 * cases can grow their own set without colliding; `BOOKMARK_OK ==
 * COLLECTION_OK == 0` by convention. There is no disk code: a bookmark is
 * catalog-only metadata with nothing on disk.
 */
#define BOOKMARK_OK 0
#define BOOKMARK_ERR_INVALID_INPUT 1
#define BOOKMARK_ERR_UNAUTHORIZED 2
#define BOOKMARK_ERR_NOT_INITIALIZED 3
#define BOOKMARK_ERR_NOT_FOUND 4
#define BOOKMARK_ERR_INVALID_STATE 5
#define BOOKMARK_ERR_OTHER 9
/**
 * FFI status codes returned by local-auth operations (UC-34/UC-35).
 * Deliberately separate from the other `*_OK == 0` families — per the
 * convention above — so local-auth use cases can grow their own set
 * without colliding.
 */
#define AUTH_OK 0
#define AUTH_ERR_INVALID_INPUT 1
#define AUTH_ERR_UNAUTHORIZED 2
#define AUTH_ERR_NOT_INITIALIZED 3
#define AUTH_ERR_INVALID_STATE 5
#define AUTH_ERR_CONFIG 8
#define AUTH_ERR_OTHER 9
/**
 * UC-41 AF-01/AF-02: the request conflicts with existing state — the
 * active auth mode is not local, or an account already exists. The FFI
 * counterpart of HTTP's `409`.
 */
#define AUTH_ERR_CONFLICT 10
/**
 * Result of `alexandria_collection_create` (UC-10). On success `status` is
 * `COLLECTION_OK` and `json` is a NUL-terminated JSON string of the
 * `Collection` body — byte-for-byte the same shape HTTP returns from
 * `POST /v1/collections` (FR-FC-24 / NFR-09). On failure `json` is NULL and
 * `status` carries the mapped error code. The caller must free `json` with
 * `alexandria_free_string`.
 */
typedef struct CollectionJsonResult {
  int status;
  char *json;
} CollectionJsonResult;
/**
 * Result of `alexandria_bookmark_create` (UC-15). On success `status` is
 * `BOOKMARK_OK` and `json` is a NUL-terminated JSON string of the `Bookmark`
 * body — byte-for-byte the same shape HTTP returns from `POST
 * /v1/bookmarks` (FR-FC-24 / NFR-09). On failure `json` is NULL and `status`
 * carries the mapped error code. The caller must free `json` with
 * `alexandria_free_string`.
 */
typedef struct BookmarkJsonResult {
  int status;
  char *json;
} BookmarkJsonResult;
/**
 * Result of `alexandria_watchlist_create` (UC-20). On success `status` is
 * `WATCHLIST_OK` and `json` is a NUL-terminated JSON string of the
 * `Watchlist` body — byte-for-byte the same shape HTTP returns from `POST
 * /v1/watchlists` (FR-FC-24 / NFR-09). On failure `json` is NULL and
 * `status` carries the mapped error code. The caller must free `json` with
 * `alexandria_free_string`.
 */
typedef struct WatchlistJsonResult {
  int status;
  char *json;
} WatchlistJsonResult;
/**
 * Result of `alexandria_reading_list_create` (UC-26). On success `status`
 * is `READING_LIST_OK` and `json` is a NUL-terminated JSON string of the
 * `ReadingList` body — byte-for-byte the same shape HTTP returns from
 * `POST /v1/reading-lists` (FR-FC-24 / NFR-09). On failure `json` is NULL
 * and `status` carries the mapped error code. The caller must free `json`
 * with `alexandria_free_string`.
 */
typedef struct ReadingListJsonResult {
  int status;
  char *json;
} ReadingListJsonResult;
/**
 * Result of `alexandria_auth_local_login` / `alexandria_auth_local_set_credentials`
 * (UC-34/UC-35). On success `status` is `AUTH_OK` and `json` is a
 * NUL-terminated JSON string of the `LocalLoginResult` /
 * `LocalCredentialsResult` body — byte-for-byte the same shape HTTP
 * returns from the matching `/v1/auth/local/*` endpoint (FR-FC-24 /
 * NFR-09). On failure `json` is NULL and `status` carries the mapped
 * error code. The caller must free `json` with `alexandria_free_string`.
 */
typedef struct AuthJsonResult {
  int status;
  char *json;
} AuthJsonResult;
const char *alexandria_version(void);
/**
 * Create a flat file or bookmark collection (UC-10 / FR-CO-01, FR-CO-02).
 *
 * `json_body` is the JSON body HTTP would send (`name` + `kind`). The
 * function deserializes it, calls the same `CreateCollectionHandler` the HTTP
 * route uses, and on success serializes the returned `Collection` back to
 * JSON — so the FFI and HTTP surfaces agree byte-for-byte modulo key ordering
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct CollectionJsonResult alexandria_collection_create(const char *json_body, const char *token);
/**
 * Create a browser bookmark, optionally in an existing bookmark collection
 * (UC-15 / FR-BM-01).
 *
 * `json_body` is the JSON body HTTP would send (`url` + `title` +
 * `collectionUuid`). The function deserializes it, calls the same
 * `CreateBookmarkHandler` the HTTP route uses, and on success serializes the
 * returned `Bookmark` back to JSON — so the FFI and HTTP surfaces agree
 * byte-for-byte modulo key ordering (parity, FR-FC-24 / NFR-09). `token` is
 * the bearer auth token.
 */
struct BookmarkJsonResult alexandria_bookmark_create(const char *json_body, const char *token);
/**
 * Create a named watchlist for tracking video consumption (UC-20 /
 * FR-WL-01).
 *
 * `json_body` is the JSON body HTTP would send (`name`). The function
 * deserializes it, calls the same `CreateWatchlistHandler` the HTTP route
 * uses, and on success serializes the returned `Watchlist` back to JSON —
 * so the FFI and HTTP surfaces agree byte-for-byte modulo key ordering
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct WatchlistJsonResult alexandria_watchlist_create(const char *json_body, const char *token);
/**
 * Add a video to a watchlist (UC-22 / FR-WL-02, FR-WL-03).
 *
 * `uuid` is the watchlist's public UUID (NUL-terminated string). `json_body`
 * is the JSON body HTTP would send (`videoUuid`). The function deserializes
 * it, calls the same `AddVideoToWatchlistHandler` the HTTP route uses, and
 * on success serializes the returned `WatchProgress` back to JSON — so the
 * FFI and HTTP surfaces agree byte-for-byte modulo key ordering (parity,
 * FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct WatchlistJsonResult alexandria_watchlist_add_video(const char *uuid,
                                                          const char *json_body,
                                                          const char *token);
/**
 * Browse watchlists and their items' watch progress (UC-21 / FR-WL-08).
 *
 * `json_filters` is the JSON filter HTTP would build from its query string
 * (`watchlistUuid`); an empty string or `null` means every watchlist. On
 * success `json` carries a JSON array of `WatchlistWithProgress` — byte-for-
 * byte the same shape HTTP returns from `GET /v1/watchlists` (parity,
 * FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct WatchlistJsonResult alexandria_watchlists_list(const char *json_filters, const char *token);
/**
 * Update watch progress (UC-23 / FR-WL-04, FR-WL-05).
 *
 * `watchlist_uuid` and `video_uuid` are the watchlist's and video's public
 * UUIDs (NUL-terminated strings). `json_body` is the JSON body HTTP would
 * send (`state`, optional `currentEpisode`/`totalEpisodes`). On success
 * `json` carries the updated `WatchProgress` — byte-for-byte the same shape
 * HTTP returns from `PATCH /v1/watchlists/{uuid}/items/{videoUuid}`
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct WatchlistJsonResult alexandria_watchlist_update_progress(const char *watchlist_uuid,
                                                                const char *video_uuid,
                                                                const char *json_body,
                                                                const char *token);
/**
 * Remove a video from a watchlist (UC-24 / FR-WL-06).
 *
 * `watchlist_uuid` and `video_uuid` are the watchlist's and video's public
 * UUIDs (NUL-terminated strings). On success `json` carries the
 * `watchlistUuid`/`videoUuid` confirmation — byte-for-byte the same shape
 * HTTP returns from `DELETE /v1/watchlists/{uuid}/items/{videoUuid}`
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct WatchlistJsonResult alexandria_watchlist_remove_video(const char *watchlist_uuid,
                                                             const char *video_uuid,
                                                             const char *token);
/**
 * Delete a watchlist (UC-25 / FR-WL-07).
 *
 * `uuid` is the watchlist's public UUID (NUL-terminated string). On success
 * `json` carries the pre-delete `Watchlist` — byte-for-byte the same shape
 * HTTP returns from `DELETE /v1/watchlists/{uuid}` (parity, FR-FC-24 /
 * NFR-09). `token` is the bearer auth token.
 */
struct WatchlistJsonResult alexandria_watchlist_delete(const char *uuid, const char *token);
/**
 * Browse reading lists and their items' read progress (UC-27 / FR-RL-08).
 *
 * `json_filters` is the JSON filter HTTP would build from its query string
 * (`readingListUuid`); an empty string or `null` means every reading list.
 * On success `json` carries a JSON array of `ReadingListWithProgress` —
 * byte-for-byte the same shape HTTP returns from `GET /v1/reading-lists`
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct ReadingListJsonResult alexandria_reading_lists_list(const char *json_filters,
                                                           const char *token);
/**
 * Local login (UC-34 / FR-AU-04): verify email + password and create a
 * session. `json_body` is the JSON body HTTP would send (`email`,
 * `password`). On success `json` carries the `LocalLoginResult` — the
 * caller presents its `sessionId` on subsequent requests instead of a
 * bearer token in local mode.
 *
 * Deliberately takes no `token`: this is how a caller obtains credentials
 * in the first place (mirrors the HTTP route being outside the auth gate).
 */
struct AuthJsonResult alexandria_auth_local_login(const char *json_body);
/**
 * Set or change local-login credentials (UC-35 / FR-AU-05, FR-AU-06).
 * `json_body` is the JSON body HTTP would send (`email`, `password`).
 * `token` is required: this changes existing credentials. Creating the
 * account is `alexandria_auth_local_register` (UC-41).
 */
struct AuthJsonResult alexandria_auth_local_set_credentials(const char *json_body,
                                                            const char *token);
/**
 * Free a string previously returned by an FFI accessor.
 *
 * # Safety
 *
 * `ptr` must be null, or a pointer returned by one of this library's
 * accessors and not yet freed. Passing anything else — a pointer this library
 * did not produce, or one already freed — is undefined behaviour. Declared
 * `unsafe` because that obligation is the caller's and cannot be checked here.
 */
void alexandria_free_string(char *ptr);