lib/core/bindings/alexandria_bindings.dart


  /// Browse reading lists and their items' read progress (UC-27 / FR-RL-08).
  ///
  /// `json_filters` is the JSON filter HTTP would build from its query string
  /// (`readingListUuid`); an empty string or `null` means every reading list.
  /// On success `json` carries a JSON array of `ReadingListWithProgress` —
  /// byte-for-byte the same shape HTTP returns from `GET /v1/reading-lists`
  /// (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  ReadingListJsonResult alexandria_reading_lists_list(
    ffi.Pointer<ffi.Char> json_filters,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_reading_lists_list(json_filters, token);
  }

  late final _alexandria_reading_lists_listPtr =
      _lookup<
        ffi.NativeFunction<
          ReadingListJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_reading_lists_list');
  late final _alexandria_reading_lists_list = _alexandria_reading_lists_listPtr
      .asFunction<
        ReadingListJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> alexandria_version() {
    return _alexandria_version();
  }

  late final _alexandria_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'alexandria_version',
      );
  late final _alexandria_version = _alexandria_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Add a video to a watchlist (UC-22 / FR-WL-02, FR-WL-03).
  ///
  /// `uuid` is the watchlist's public UUID (NUL-terminated string). `json_body`
  /// is the JSON body HTTP would send (`videoUuid`). The function deserializes
  /// it, calls the same `AddVideoToWatchlistHandler` the HTTP route uses, and
  /// on success serializes the returned `WatchProgress` back to JSON — so the
  /// FFI and HTTP surfaces agree byte-for-byte modulo key ordering (parity,
  /// FR-FC-24 / NFR-09). `token` is the bearer auth token.
  WatchlistJsonResult alexandria_watchlist_add_video(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> json_body,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_watchlist_add_video(uuid, json_body, token);
  }

  late final _alexandria_watchlist_add_videoPtr =
      _lookup<
        ffi.NativeFunction<
          WatchlistJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_watchlist_add_video');
  late final _alexandria_watchlist_add_video =
      _alexandria_watchlist_add_videoPtr
          .asFunction<
            WatchlistJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// Create a named watchlist for tracking video consumption (UC-20 /
  /// FR-WL-01).
  ///
  /// `json_body` is the JSON body HTTP would send (`name`). The function
  /// deserializes it, calls the same `CreateWatchlistHandler` the HTTP route
  /// uses, and on success serializes the returned `Watchlist` back to JSON —
  /// so the FFI and HTTP surfaces agree byte-for-byte modulo key ordering
  /// (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  WatchlistJsonResult alexandria_watchlist_create(
    ffi.Pointer<ffi.Char> json_body,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_watchlist_create(json_body, token);
  }

  late final _alexandria_watchlist_createPtr =
      _lookup<
        ffi.NativeFunction<
          WatchlistJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_watchlist_create');
  late final _alexandria_watchlist_create = _alexandria_watchlist_createPtr
      .asFunction<
        WatchlistJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Delete a watchlist (UC-25 / FR-WL-07).
  ///
  /// `uuid` is the watchlist's public UUID (NUL-terminated string). On success
  /// `json` carries the pre-delete `Watchlist` — byte-for-byte the same shape
  /// HTTP returns from `DELETE /v1/watchlists/{uuid}` (parity, FR-FC-24 /
  /// NFR-09). `token` is the bearer auth token.
  WatchlistJsonResult alexandria_watchlist_delete(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_watchlist_delete(uuid, token);
  }

  late final _alexandria_watchlist_deletePtr =
      _lookup<
        ffi.NativeFunction<
          WatchlistJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_watchlist_delete');
  late final _alexandria_watchlist_delete = _alexandria_watchlist_deletePtr
      .asFunction<
        WatchlistJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Remove a video from a watchlist (UC-24 / FR-WL-06).
  ///
  /// `watchlist_uuid` and `video_uuid` are the watchlist's and video's public
  /// UUIDs (NUL-terminated strings). On success `json` carries the
  /// `watchlistUuid`/`videoUuid` confirmation — byte-for-byte the same shape
  /// HTTP returns from `DELETE /v1/watchlists/{uuid}/items/{videoUuid}`
  /// (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  WatchlistJsonResult alexandria_watchlist_remove_video(
    ffi.Pointer<ffi.Char> watchlist_uuid,
    ffi.Pointer<ffi.Char> video_uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_watchlist_remove_video(
      watchlist_uuid,
      video_uuid,
      token,
    );
  }

  late final _alexandria_watchlist_remove_videoPtr =
      _lookup<
        ffi.NativeFunction<
          WatchlistJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_watchlist_remove_video');
  late final _alexandria_watchlist_remove_video =
      _alexandria_watchlist_remove_videoPtr
          .asFunction<
            WatchlistJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// Update watch progress (UC-23 / FR-WL-04, FR-WL-05).
  ///
  /// `watchlist_uuid` and `video_uuid` are the watchlist's and video's public
  /// UUIDs (NUL-terminated strings). `json_body` is the JSON body HTTP would
  /// send (`state`, optional `currentEpisode`/`totalEpisodes`). On success
  /// `json` carries the updated `WatchProgress` — byte-for-byte the same shape
  /// HTTP returns from `PATCH /v1/watchlists/{uuid}/items/{videoUuid}`
  /// (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  WatchlistJsonResult alexandria_watchlist_update_progress(
    ffi.Pointer<ffi.Char> watchlist_uuid,
    ffi.Pointer<ffi.Char> video_uuid,
    ffi.Pointer<ffi.Char> json_body,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_watchlist_update_progress(
      watchlist_uuid,
      video_uuid,
      json_body,
      token,
    );
  }

  late final _alexandria_watchlist_update_progressPtr =
      _lookup<
        ffi.NativeFunction<
          WatchlistJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_watchlist_update_progress');
  late final _alexandria_watchlist_update_progress =
      _alexandria_watchlist_update_progressPtr
          .asFunction<
            WatchlistJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// Browse watchlists and their items' watch progress (UC-21 / FR-WL-08).
  ///
  /// `json_filters` is the JSON filter HTTP would build from its query string
  /// (`watchlistUuid`); an empty string or `null` means every watchlist. On
  /// success `json` carries a JSON array of `WatchlistWithProgress` — byte-for-
  /// byte the same shape HTTP returns from `GET /v1/watchlists` (parity,
  /// FR-FC-24 / NFR-09). `token` is the bearer auth token.
  WatchlistJsonResult alexandria_watchlists_list(
    ffi.Pointer<ffi.Char> json_filters,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_watchlists_list(json_filters, token);
  }

  late final _alexandria_watchlists_listPtr =
      _lookup<
        ffi.NativeFunction<
          WatchlistJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_watchlists_list');
  late final _alexandria_watchlists_list = _alexandria_watchlists_listPtr
      .asFunction<
        WatchlistJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();
}

const int AUTH_ERR_CONFIG = 8;

const int AUTH_ERR_CONFLICT = 10;

const int AUTH_ERR_INVALID_INPUT = 1;

const int AUTH_ERR_INVALID_STATE = 5;

const int AUTH_ERR_NOT_INITIALIZED = 3;

const int AUTH_ERR_OTHER = 9;

const int AUTH_ERR_UNAUTHORIZED = 2;

const int AUTH_OK = 0;

/// Result of `alexandria_auth_local_login` / `alexandria_auth_local_set_credentials`
/// (UC-34/UC-35). On success `status` is `AUTH_OK` and `json` is a
/// NUL-terminated JSON string of the `LocalLoginResult` /
/// `LocalCredentialsResult` body — byte-for-byte the same shape HTTP
/// returns from the matching `/v1/auth/local/*` endpoint (FR-FC-24 /
/// NFR-09). On failure `json` is NULL and `status` carries the mapped
/// error code. The caller must free `json` with `alexandria_free_string`.
final class AuthJsonResult extends ffi.Struct {
  @ffi.Int()
  external int status;

  external ffi.Pointer<ffi.Char> json;

  static ffi.Pointer<AuthJsonResult> $allocate(
    ffi.Allocator $allocator, {
    required int status,
    required ffi.Pointer<ffi.Char> json,
  }) => $allocator<AuthJsonResult>()
    ..ref.status = status
    ..ref.json = json;
}

const int BOOKMARK_ERR_INVALID_INPUT = 1;

const int BOOKMARK_ERR_INVALID_STATE = 5;

const int BOOKMARK_ERR_NOT_FOUND = 4;

const int BOOKMARK_ERR_NOT_INITIALIZED = 3;

const int BOOKMARK_ERR_OTHER = 9;

const int BOOKMARK_ERR_UNAUTHORIZED = 2;

const int BOOKMARK_OK = 0;

/// Result of `alexandria_bookmark_create` (UC-15). On success `status` is
/// `BOOKMARK_OK` and `json` is a NUL-terminated JSON string of the `Bookmark`
/// body — byte-for-byte the same shape HTTP returns from `POST
/// /v1/bookmarks` (FR-FC-24 / NFR-09). On failure `json` is NULL and `status`
/// carries the mapped error code. The caller must free `json` with
/// `alexandria_free_string`.
final class BookmarkJsonResult extends ffi.Struct {
  @ffi.Int()
  external int status;

  external ffi.Pointer<ffi.Char> json;

  static ffi.Pointer<BookmarkJsonResult> $allocate(
    ffi.Allocator $allocator, {
    required int status,
    required ffi.Pointer<ffi.Char> json,
  }) => $allocator<BookmarkJsonResult>()
    ..ref.status = status
    ..ref.json = json;
}

const int COLLECTION_ERR_INVALID_INPUT = 1;

const int COLLECTION_ERR_INVALID_STATE = 5;

const int COLLECTION_ERR_NOT_FOUND = 4;

const int COLLECTION_ERR_NOT_INITIALIZED = 3;

const int COLLECTION_ERR_OTHER = 9;

const int COLLECTION_ERR_UNAUTHORIZED = 2;

const int COLLECTION_OK = 0;

/// Result of `alexandria_collection_create` (UC-10). On success `status` is
/// `COLLECTION_OK` and `json` is a NUL-terminated JSON string of the
/// `Collection` body — byte-for-byte the same shape HTTP returns from
/// `POST /v1/collections` (FR-FC-24 / NFR-09). On failure `json` is NULL and
/// `status` carries the mapped error code. The caller must free `json` with
/// `alexandria_free_string`.
final class CollectionJsonResult extends ffi.Struct {
  @ffi.Int()
  external int status;
